--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "entity-host",
-  "version": "0.1.0-alpha2",
+  "version": "0.1.0",
   "description": "An entity to manage host including a prior validation (IPv4, IPv6 or hostname) during the instantiation.",
   "main": "lib/index.js",
   "scripts": {
