[#4] Bug fix: invalid title in README; update base template for README.md

--- a/.gulp/settings.json
+++ b/.gulp/settings.json
@@ -4,7 +4,7 @@
   },
   "github": {
     "USER_NAME": "9fv",
-    "REPO_NAME": "node-host-validator"
+    "REPO_NAME": "node-entity-host"
   },
   "sources": {
     "path": "lib/",
